@@ -1,3 +1,10 @@
+NEXT
+    Bug Fixes
+    * Data::Alias is only loaded when needed avoiding a threads + eval bug
+      in most cases and improving compile time performance.
+      [rt.cpan.org 82922]
+
+
 20121219.0033_001   Wed Dec 19 00:33:58 PST 2012
     New Features
     * Can now have aliased named parameters.
